  example, "Foo!!!?!?!?".rstrip("?!") -> "Foo". In addition,
  "200L".strip("L") will return "200". This is useful for replacing
  code that assumed longs will always be printed with a trailing "L".

- A change to how new-style classes deal with __doc__: you can now
  supply a __doc__ descriptor that returns something different for a
  class than for instances of that class.

Extension modules

- In readline.c: change completion to avoid appending a space
  character; this is usually more useful when editing Python code.

- Fixed a crash in debug builds for marshal.dumps([128] * 1000).  [SF
  bug 588452]

- In cPickle.c: more robust test of whether global objects are
  accessible.  Added recursion limit to pickling [SF bug 576084].  Try
  the persistent id code *before* calling save_global().

- In mmapmodule.c: if the size passed to mmap() is larger than the
  length of the file on non-Windows platforms, a ValueError is
  raised. [SF bug 585792]

- In socketmodule.c: improve robustness of IPv6 code.

- In _hotshot.c: fix broken logic in the logreader object.

- In zlibmodule.c: fix for crash on second flush() call.  [SF bug
  544995]

Library

- The email package from the Python 2.3 development tree has been
  backported, including updated documentation.  This version
  corresponds to email 2.4.1 and should be nearly completely backward
  compatible.  However there have been lots of improvements in the
  API, so you should read the section in the library manual about the
  changes since email v1.

- In pydoc.py: Extend stripid() to handle strings ending in more than
  one '>'; add resolve() to handle looking up objects and names (fix
  SF bug 586931); add a nicer error message when given a filename that
  doesn't exist.  Pretend that the docstring for non-callable objects
  is always None; this makes for less confusing output and fixes the
  problem reported in SF patch 550290.  Change the way 'less' is
  invoked as a browser (on Unix) to make it more robust.
